ensure: github-button mobile responsiveness

--- a/assets/css/common/github-button.css
+++ b/assets/css/common/github-button.css
@@ -1,6 +1,8 @@
 /* GitHub Button */
 .github-button {
     display: inline-flex;
+    width: 100%;
+    justify-content: center;
     padding: calc(var(--gap)) var(--gap);
     margin: 1vh 0 0 0;
     background-color: var(--entry);
@@ -12,6 +14,26 @@
     box-shadow: 0.2vh 0.2vh 0.5vh 0 rgba(0, 0, 0, 0.5);
 }
 
+.github-button .repo-name-link {
+    font-family: 'IBM Plex Mono', monospace;
+    color: var(--link);
+    filter: brightness(180%);
+}
+
 .github-button:hover, .github-button:focus {
     filter: brightness(90%);
+}
+
+@media (max-width: 768px) {
+    .github-button {
+        display: inline-flex;
+        justify-content: center;        
+        text-align: center;
+        margin-top: 2vh;
+        font-size: 0.9rem;
+    }
+
+    .github-button .view-source-text {
+        display: none;
+    }
 }
