--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -95,3 +95,7 @@ body:not(.dark) #sun {
 .logo-switches {
     flex-wrap: inherit;
 }
+
+.collapsed {
+    display: none;
+}
